# data-pipeline

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
.github/workflows/: ci.yml  cron.yml
src/config/: settings.py
src/fetch/: __init__.py  client.py
src/load/: __init__.py  writer.py
src/reports/: __init__.py  generator.py
src/transform/: __init__.py  pipeline.py
tests/: conftest.py  test_fetch.py  test_load.py  test_transform.py
